--- a/Oblig-3/src/Oppg-2/noe1.html
+++ b/Oblig-3/src/Oppg-2/noe1.html
@@ -5,13 +5,13 @@
     <head>
 
         <body>
-
+            <!--The div segregates all the content within it and is used to center all the contet to the center of the page-->
             <div class="ting" align="center">
 
                 <table>
 
                     <tr>
-
+                        <!--Gives a name to the values intended in the coloms-->
                         <th>Name</th>
 
                         <th>Number</th>
@@ -21,7 +21,7 @@
                     {{range $.Entries}}
 
                         <tr>
-
+                            <!--Here are the actual values located-->
                             <th>{{.Name}}</th>
 
                             <th>{{.Number}}</th>
