--- a/Oblig-4/src/Prosjekt/index.html
+++ b/Oblig-4/src/Prosjekt/index.html
@@ -11,7 +11,7 @@
     <body>
         <div class="ting" align="center">
             <h1>Miljøstasjoner i Stavanger</h1>
-            <p>Velg mellom tabell visning eller google map visning</p>
+            <p>Her kan du få en oversikt over alle miljøstasjonene i Stavanger. Du kan selv velge om du vil vise dem i en tabell eller få en oversikt på et kart.</p>
 
             <form action="/Miljøstasjoner">
                 <input type="submit" value="Miljøstasjoner">
