--- a/Oblig-4/src/Prosjekt/miljøstasjoner.html
+++ b/Oblig-4/src/Prosjekt/miljøstasjoner.html
@@ -7,7 +7,7 @@
 
     <style>
         table, th, td {
-            border: 5px solid black;
+            border: 2px solid grey;
             border-collapse: collapse;
         }
         th {
