--- a/Oblig-4/src/Prosjekt/miljøstasjoner.html
+++ b/Oblig-4/src/Prosjekt/miljøstasjoner.html
@@ -23,6 +23,12 @@
         }
     </style>
     <body>
+ 
+        <h1> Tabellvisning av miljøstasjoner i Stavanger </h1>
+        <p1>I listen under finner du en oversikt over alle miløstasjonene
+i Stavanger. Du kan også se hva slags avfall stasjonen tar i mot.
+J betyr at stasjonen tar i mot avfallet, og N betyr at stasjonen
+ikke tar i mot den typen avfall.</p1>
 
         <div class="ting" align="center">
 
@@ -30,13 +36,13 @@
 
                 <tr>
 
-                    <th>Name</th>
+                    <th>Navn</th>
 
-                    <th>Plastic</th>
+                    <th>Plastikk</th>
 
-                    <th>GlasMetal</th>
+                    <th>Glass/Metall</th>
 
-                    <th>Shoe</th>
+                    <th>Sko</th>
 
                 </tr>
 
