--- a/Oblig-4/src/Prosjekt/miljøstasjoner.html
+++ b/Oblig-4/src/Prosjekt/miljøstasjoner.html
@@ -2,70 +2,71 @@
 
 <html>
 
-    <head>
-    </head>
+<head>
+</head>
 
-    <style>
-        table, th, td {
-            border: 2px solid grey;
-            border-collapse: collapse;
-        }
-        th {
-            text-align: left;
-        }
-        body {
-            background-color: pink;
-        }
+<style>
+    table, th, td {
+        border: 2px solid grey;
+        border-collapse: collapse;
+    }
+    th {
+        text-align: left;
+    }
+    body {
+        background-color: pink;
+    }
 
-        h1 {
-            color: navy;
-            margin-left: 20px;
-        }
-    </style>
-    <body>
- 
-        <h1> Tabellvisning av miljøstasjoner i Stavanger </h1>
-        <p1>I listen under finner du en oversikt over alle miløstasjonene
-i Stavanger. Du kan også se hva slags avfall stasjonen tar i mot.
-J betyr at stasjonen tar i mot avfallet, og N betyr at stasjonen
-ikke tar i mot den typen avfall.</p1>
+    h1 {
+        color: navy;
+        margin-left: 20px;
+    }
+</style>
+<body>
 
-        <div class="ting" align="center">
 
-            <table style="width:50%">
+<div class="ting" align="center">
 
-                <tr>
+    <h1> Tabellvisning av miljøstasjoner i Stavanger </h1>
+    <p1>I listen under finner du en oversikt over alle miløstasjonene
+        i Stavanger. <br> Du kan også se hva slags avfall stasjonen tar i mot.
+        J betyr at stasjonen tar i mot avfallet, og N betyr at stasjonen
+        ikke tar i mot den typen avfall.</p1>
 
-                    <th>Navn</th>
+    <table style="width:50%">
 
-                    <th>Plastikk</th>
+        <tr>
 
-                    <th>Glass/Metall</th>
+            <th>Navn</th>
 
-                    <th>Sko</th>
+            <th>Plastikk</th>
 
-                </tr>
+            <th>Glass/Metall</th>
 
-            {{range $.Entries}}
+            <th>Sko</th>
 
-                <tr>
+        </tr>
 
-                    <th>{{.Name}}</th>
+    {{range $.Entries}}
 
-                    <th>{{.Plastic}}</th>
+        <tr>
 
-                    <th>{{.GlasMetal}}</th>
+            <th>{{.Name}}</th>
 
-                    <th>{{.Shoe}}</th>
+            <th>{{.Plastic}}</th>
 
-                </tr>
+            <th>{{.GlasMetal}}</th>
 
-            {{end}}
+            <th>{{.Shoe}}</th>
 
-            </table>
+        </tr>
 
-        </div>
+    {{end}}
 
-    </body>
+    </table>
+
+</div>
+
+</body>
 
 </html>
